2007-03-05  Richard Dale  <rdale@foton.es>

	* Free up some GCHandles when they're finished with

2007-03-03  Arno Rehn  <arno@arnorehn.de>

	* Added QModelIndex.InternalPointer() and QAbstractItemModel.CreateIndex()
	* Added simpletreemodel example (doesn't fully work yet)
	* Fixed invocation of methods with an enum as a argument

2007-02-28  Arno Rehn  <arno@arnorehn.de>

	* Don't include inherited signals/slots when building up the metaobject
	* Added seperate methods for getting all the signals/slots of a class, including
	  inherited ones. This is needed for InvokeCustomSlot() and SignalInvocation.Invoke()
	* Changed qt_metacall to be more like the one genereted by moc:
		* First call qt_metacall of the base class
		* If the return value is postive, it was a C++ slot/signal/property, return
		* If the return value is negative, look for C# slots/signals/properties
		  and call them
	* Made QObject.FindChild() and QObject.FindChildren() work

2007-02-27  Richard Dale  <rdale@foton.es>

	* Made the QMetaObject creation work correctly with nested subclasses

2007-02-24  Arno Rehn  <arno@arnorehn.de>

	* Added ReadProperty and WriteProperty classes. Now custom properties can
	  be accessed via Property() and SetProperty() (and dbus?). However there seems
	  to be a problem with marshalling, see FIXMEs in the code. The workaround should
	  work as well as with marshalling, though.
	* Autogeneration of Q_PROPERTY signatures and types now works properly.
	* Flags of properties should now be set correctly.
	
2007-02-21  Arno Rehn  <arno@arnorehn.de>

	* QMetaObjects are now correctly inherited.
	* If there was a request for a QMetaObject of a native Qt class, a new
	  QMetaObject was created with all the signals and slots of the class and
	  the native QMetaObject was just used as a parent. The resulting object had
	  every definition twice. Fixed.

2007-02-20  Richard Dale  <rdale@foton.es>

	* Commented out QList<QHostAddress> marshallers as it caused a linking