@@ -1,3 +1,10 @@
+2007-03-06  Arno Rehn  <arno@arnorehn.de>
+
+	* GCHandles for QModelIndex'es are now stored in a Dictionary.
+	  QAbstractItemModel.CreateIndex() looks up a GCHandle in the Dictionary
+	  and if it exists it is passed to the C++ function. Child items of a tree model
+	  can now be selected.
+
 2007-03-05  Richard Dale  <rdale@foton.es>
 
 	* Free up some GCHandles when they're finished with
